2008-01-31  Sven Herzberg  <sven@imendio.com>

	Added prepare-ChangeLog.pl

	* tools/prepare-ChangeLog.pl: from web-devel-2, revision 4603.

2008-01-16  Martyn Russell  <martyn@imendio.com>
	
	* tools/maintainer/*: Added the maintainer script to be homed on
	GNOME's	servers rather than Imendio's servers. 
	
2007-08-15  Olav Vitters  <olav@bkor.dhs.org>

	* tools/install-module: Trigger GNOME library to rebuild.

2004-10-17  Curtis Hovey  <sinzui@cox.net>

	* 2.x/style/navigation/top-users.xml:
	
	Add art & themes to the top naviation to match the rest of w.g.o.

2003-10-27  Kjartan Maraas  <kmaraas@gnome.org>

	* single_module/tools/list_translators.sh: Add -u to the cvs command
	so that the script actually works.

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* single_module/tools/README.txt: upd
	* single_module/tools/list_translators.pl: added Perl version
	* single_module/tools/list_translators.sh: forgot to match "_" for
	languages like zh_TW

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* single_module/tools/list_translators.sh: that's one argument needed
	not 2

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* single_module/tools/list_translators.sh: print out the usage if
	the number of arguments is not the right one

2003-09-20  Kjartan Maraas  <kmaraas@gnome.org>

	* 2.x/2.4rnotes/rninstallation.xml: Move scrollkeeper up to
	make the build order work.

2003-09-09  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: play with the voodoo
	a bit.

2003-07-07  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: fix a couple of things.

2003-06-18  Murray Cumming  <murrayc@usa.net>

	* 2.x/: Started skeleton of 2.4 release notes, by ripping stuff out of
	a copy of the 2.2 release notes.
	* Put the 2.0 release notes in an appropriately named directory.

2003-06-14  Mark McLoughlin  <mark@skynet.ie>

	* single_module/tools/list_translators.sh: kill runsocks
	foo.
