@@ -1,3 +1,9 @@
+2008-01-31  Sven Herzberg  <herzi@gnome-de.org>
+
+	Added git support code for prepare-ChangeLog.pl
+
+	* tools/prepare-ChangeLog.pl: added git-support
+
 2008-01-31  Sven Herzberg  <sven@imendio.com>
 
 	Added prepare-ChangeLog.pl
